[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/new/effects_sounds/enemy/enemy_afterdead_explosion_anim_spritesheet.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/Hurtbox_Hitbox/Hitbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/AutoLoad/Stats.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/UI/HealthBar/HealthBar.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Actors/Enemies/Enemy.gd" type="Script" id=5]
[ext_resource path="res://src/Actors/Hurtbox_Hitbox/Hurtbox.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/Actors/Hurtbox_Hitbox/SoftCollision.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/new/effects_sounds/enemy/Blop.mp3" type="AudioStream" id=8]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4.45449, 2.56953 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 6, 4.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 6, 4.5 )

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Dead_anim:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Dead_anim:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Audio_dead_sfx:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AnimatedSprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Hurtbox:monitoring")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Hurtbox:monitorable")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Hitbox:monitoring")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Hitbox:monitorable")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("SoftCollision:monitoring")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("SoftCollision:monitorable")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=6]
resource_name = "dead"
length = 0.45
tracks/0/type = "value"
tracks/0/path = NodePath("Dead_anim:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Dead_anim:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Audio_dead_sfx:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AnimatedSprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Hurtbox:monitoring")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Hurtbox:monitorable")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Hitbox:monitoring")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Hitbox:monitorable")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("SoftCollision:monitoring")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("SoftCollision:monitorable")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Enemy" type="KinematicBody2D" groups=["enemy"]]
z_index = 1
collision_layer = 2
collision_mask = 8
script = ExtResource( 5 )

[node name="Stats" parent="." instance=ExtResource( 3 )]

[node name="HealthBar" parent="." instance=ExtResource( 4 )]
margin_left = -6.0
margin_top = -10.0
margin_right = -6.0
margin_bottom = -10.0
rect_scale = Vector2( 0.2, 0.2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
modulate = Color( 0.2, 0.372549, 0.819608, 1 )
position = Vector2( -0.5, 0 )
scale = Vector2( 0.89797, 1.16753 )
shape = SubResource( 2 )

[node name="MoveTowardPlayer" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 50, 0 )
collision_mask = 9

[node name="SoftCollision" parent="." instance=ExtResource( 7 )]

[node name="Hurtbox" parent="." groups=["enemy_hurtbox"] instance=ExtResource( 6 )]
collision_layer = 256

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
modulate = Color( 0.317647, 0.247059, 0.509804, 0.745098 )
shape = SubResource( 3 )

[node name="Hitbox" parent="." groups=["enemy_hitbox"] instance=ExtResource( 2 )]
collision_layer = 128

[node name="CollisionShape2D" parent="Hitbox" index="0"]
modulate = Color( 0.941176, 0.905882, 0.0352941, 0.560784 )
shape = SubResource( 4 )

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="AttackCooldown2" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="softCollTimer" type="Timer" parent="."]
one_shot = true

[node name="RandomMove" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 10, 10 )
collision_mask = 8

[node name="moveTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 5 )
anims/dead = SubResource( 6 )

[node name="Dead_anim" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )
hframes = 4

[node name="Audio_dead_sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
max_distance = 300.0
bus = "Sfx"

[connection signal="health_updated" from="Stats" to="HealthBar" method="_on_Stats_health_updated"]
[connection signal="max_health_updated" from="Stats" to="HealthBar" method="_on_Stats_max_health_updated"]

[editable path="Hurtbox"]
[editable path="Hitbox"]
